# agentsecrets

./: .gitignore  .goreleaser.yaml  README.md  go.mod  go.sum  makefile
.github/workflows/: release.yml
cmd/agentsecrets/commands/: call.go  init.go  mcp.go  proxy.go  root.go  secrets.go  status.go  workspace.go
docs/: DEMO_SCRIPT.md  PROXY.md
docs/plans/: 2026-03-03-claude-code-skill-design.md  2026-03-03-claude-code-skill-plan.md
integrations/openclaw/: SKILL.md
npm/: package.json
pkg/api/: client.go
pkg/auth/: auth.go
pkg/config/: config.go
pkg/crypto/: crypto.go
pkg/keyring/: keyring.go
pkg/mcp/: server.go  server_test.go
pkg/projects/: projects.go
pkg/proxy/: audit.go  engine.go  engine_test.go  forwarder.go  injector.go  injector_test.go  server.go
pkg/secrets/: dotenv.go  secrets.go
pkg/workspaces/: workspaces.go
pypi/: pyproject.toml
pypi/env/: pyvenv.cfg
pypi/src/agentsecrets/: binary.py
skills/: README.md
skills/claude/: agentsecrets-call.md  agentsecrets-code.md  agentsecrets-ops.md  agentsecrets-setup.md  agentsecrets.md
